# systematic-review-assistant

./: .dockerignore  .env.example  .gitignore  .gitmodules  .markdownlint-cli2.mjs  .markdownlint.yaml  .pre-commit-config.yaml  .python-version  Dockerfile  Makefile  README.md  TODO.md  alembic.ini  edge-functions.code-workspace  package.json  pnpm-lock.yaml  pyproject.toml  requirements.txt
.ai/: .gitignore  build-web-agent.cfg.js  ide-bmad-orchestrator.cfg.md  ide-bmad-orchestrator.md
.ai/chats/: 1.1.story.impl-session.md  1.2.story.refactoring-session.md  2.2.sm-session.md
.ai/data/: technical-preferences.txt
.bmad-core/: bmad-core-config.yml  install-manifest.yml
.bmad-core/tasks/: doc-migration-task.md
.cursor/rules/: py-testing-streamlit-session-state.mdc  py-unit-testing.mdc  run-tests-rules.mdc
.cursor/rules/agents/: analyst.mdc  architect.mdc  dev.mdc  pm.mdc  po.mdc  qa.mdc  sm.mdc
.cursor/rules/core-rules/: readme.md  rule-generating-agent.mdc
.cursor/rules/docs/: markdown-rules.mdc  mermaid-synxtax-always.mdc
.cursor/rules/global/: mcp-tools-always.mdc  (+1 more)
.cursor/rules/global-rules/: comments-always.mdc  mermaid-synxtax-always.mdc  running-tests-always.mdc
.github/: renovate.json  renovate.json5
.github/workflows/: pr.yml  security.yml  stale.yml
ai/chats/: 1-po-validation.md  1.2.story.impl-session-full.md  1.2.story.sm-session-full.md  s2.2.dev-session.md
ai/stories/: 1.1.story.md  1.2.story.md  1.3.story.md  1.4.story.md  2.1.story.md  2.2.story.md  2.6.story.md  4.1.story.md  4.13.story.md  4.2.story.md  4.3.story.md  4.4.story.md  4.5.story.md  4.6.story.md  4.7.story.md  4.8.story.md  4.9.story.md
alembic/: env.py
alembic/versions/: 0ab256b04824_tz_aware_timestamps.py  1e530067ad44_add_other_to_searchdatabasesource_enum.py  254fe6c3d36d_add_uuid_test_table.py  283bec4c4add_add_abstract_screening_result.py  2b20294131a6_add_search_tables_refactored.py  2c7373437db5_fix_logrecord_indexes.py  308659b7dfb8_add_screening_resolutions_table_and_.py  39a7520b10c2_create_benchmark_result_items_table.py  3c121a82c373_searchresult_consolidation.py  443f02163793_add_columns_to_pubmed_results.py  446c386d3d77_add_benchmark_run_table.py  61a85ed79c7d_add_search_tables.py  8f3511ee9250_update_models.py  9c8ba76fedd3_fix_searchdatabasesource_enum.py  9cd2f7e24c87_create_benchmark_run_and_result_item_.py  a8b474163c4b_refactor_models.py  ad42aea13565_add_langsmith_ids_to_benchmark_result_.py  add_search_results_resolution_id.py  c5df8da2885b_add_screening_resolution_table.py  d122fe7364e6_check_schema_sync_after_refactor.py  ec76fb98d0da_add_final_decision_to_search_results.py  edd72f8c1a16_add_abstract_screening_result.py  f4c07df39652_.py  fa27a6ff5693_inspect_metadata.py  fa27a6ff5693_inspect_metadata.pybak
criteria/: criteria_20241226_111906.json  criteria_20241226_112447.json
docs/: MPH_SR_Prototype_Full_Vision_PM_Prompt.md  MPH_SR_Prototype_Main_Project_Brief.md  SRA_Recovery_PM_Prompt.md  SRA_Recovery_Project_Brief.md  _index.md  analysis_low_level.md  api-reference.md  architecture.md  coding-standards.md  data-models.md  environment-vars.md  epic1-recovery-search-stabilization.md  epic2-recovery-resolver-implementation.md  epic3-recovery-testing-and-integrity.md  index.md  naming-conventions.md  po-recovery-approval.md  prd-benchmark-may.md  prd-recovery.md  prd-resolver.md  prd.md  project-brief.md  project-brief.recovery.md  project-structure.md  prompt-engineering-guide.md  resolver-old-impl.md  sr_metrics.md  streamlit-testing-framework.md  streamlit-ui-testing-guide.md  testing-strategy.md
docs/_ai/: ide-bmad-orchestrator.cfg.md  ide-bmad-orchestrator.md  web-bmad-orchestrator-agent.cfg.md  web-bmad-orchestrator-agent.md
docs/architecture/: api-internal.md  coding-standards.md  core-workflows.md  data-models.md  database-schema.md  external-apis.md  naming-conventions.md  rest-api-spec.md  tech-stack.md  testing-strategy.md  ui-ux-spec.md
docs/benchmark/: bechmark-protocol.md  benchmark-workflows.md  benchmark_human_ground_truth.xlsx  human-reviewer-results-to-bench-against.csv  o3-xml-criteria-homelessness.md
docs/epics/: epic1-recovery-search-stabilization.md  epic3-recovery-testing-and-integrity.md  epic4-sra-benchmarking-module.md
docs/guides/: prompt-engineering-guide.md  streamlit-apptest-framework-guide.md
docs/prd/: epic4-sra-benchmarking-module.md  index.md
docs/prompts/: deep-research_st-ui-testing.md
docs/proposals/: fine_tuning_rag_interface.md
docs/stories/: 1.1.story.md  1.2.story.md  1.4.story.md  1.5.story.md  1.6.story.md  2.1.story.md  2.2.story.md  2.3.story.md  2.4.story.md  2.4A.story.md  2.5.story.md  2.5A.story.md  2.5B.story.md  2.6.story.md  4.10.story.md  4.11.story.md  4.12.story.md  4.13.story.md  4.14.story.md  4.2.story.md  4.3.story.md  4.5.story.md  4.6.story.md  4.7.story.md  4.8.story.md  4.9.story.md  story-dependency-diagram.md
docs/templates/: api-reference.md  coding-standards.md  epicN.md  project-brief.md  story-template.md
src/step1/: __init__.py  app_step1.py  suggestion_agent.py
src/step2/: __init__.py  app_step2.py  llama_index_integration.py  logger.py  pubmed_integration.py  search_utils.py  test_llama_index_integration.py  test_pubmed.py  test_search_utils.py
supabase/: config.toml  config.toml.local
tests/: __init__.py  conftest.py
tests/integration/: test_llama_index.py  test_pubmed.py  test_repositories_old.py  test_resolver.py  test_resolver_agent.py  test_suggestion_agent.py  test_suggestion_agent.py.fixme
tests/step2/: __init__.py  test_llama_index_integration.py  test_pubmed.py  test_search_utils.py
tests/unit/: __init__.py  test_pubmed.py  test_repositories.py  test_repositories_old.py  test_search_utils.py
tools/: add-python-code-fence.sed  doc_indexer.py  pubmed_250101.dtd  pubmed_250101.mermaid  pubmed_250101.schema.json  pubmed_250101.yaml  py-fix-format.sh  recover_changelogs.py  seed_benchmark_data.py  supabase-fn-new.py  test-models-and-gen-data.py  test_models_and_gen_data.py
typings/langgraph/: constants.pyi  errors.pyi  types.pyi
(+158 files in other folders)
